--- a/views/myaccount.ejs
+++ b/views/myaccount.ejs
@@ -31,7 +31,7 @@
         <p class="card-title"><%=user.contact.city%> - <%=user.contact.state%></p>
         <hr>
         <p class="card-title"><b>Joined At:</b>&nbsp;<%=user.joinedAt%></p>
-        <a style="float: right;bottom: 20px; margin-left: 20px; border-radius: 10px;" href="/buyandsell/" class="card-link"><button>Sign Out👋</button></a>
+        <a style="float: right;bottom: 20px; margin-left: 20px; border-radius: 10px;" href="/" class="card-link"><button>Sign Out👋</button></a>
 
         
 
