--- a/includes/footer.ejs
+++ b/includes/footer.ejs
@@ -4,9 +4,9 @@
   <hr>
   <div class="f-info"> 
     <div class="f-info-socials">
-      <i class="fa-brands fa-square-facebook"></i>
-      <i class="fa-brands fa-square-instagram"></i>
-      <i class="fa-brands fa-linkedin"></i>
+      <a href="https://github.com/ravishankar7488?tab=repositories"><i class="fa-brands fa-github"></i></a>
+      <a href="https://www.instagram.com/_i_m_ravi_pandey/"><i class="fa-brands fa-square-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/ravi-shankar-pandey7488858345/"><i class="fa-brands fa-linkedin"></i></a>
     </div>
     <div class="f-info-brand">&copy;B&S Private Limited</div>
     <div class="f-info-links">
