--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -161,7 +161,7 @@
         <h3>Login</h3>
         <input class="form-control login-form-control" type="text" placeholder="Email: " name="femail" >
         <input class="form-control login-form-control" type="password" placeholder="Password":  name="fpassword">
-        <a href="#" style="margin-bottom: 20px; text-decoration: none;">Forgot Password?</a>
+        <a href="/buyandsell/password_recovery" style="margin-bottom: 20px; text-decoration: none;">Forgot Password?</a>
           <div class="col-12" style="margin-top: 10px;">
            <button type="submit" class="btn btn-primary">Login</button>&nbsp;&nbsp;
             <a href="/buyandsell/signup" class="btn btn-primary">Sign Up</a>
