--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -2,12 +2,12 @@
 <body><hr>
   <div class="cards">
     <%products.forEach((product)=>{%>
-    <div class="card" style="width: 18rem; margin: 5px;">
+    <div class="card" style="width: 18rem; margin: 5px; margin-bottom: 25px;">
   <img src="<%=product.imageurl%>" class="card-img-top" alt="Product Image">
   <div class="card-body">
-    <h5 class="card-title"><%=product.title%></h5>
-    <p class="card-text"> ₹<%=product.price.toLocaleString("en-IN")%></p>
-    <p><i><%=product.tags%></i></p>
+<h6 class="card-title"><span><%=product.brand%></span>&nbsp; |&nbsp; <%=product.purchase %></h6>
+    <p class="card-title"><%=product.title%></p>
+    <p class="card-text"><span><strong>₹ <%=(product.priceafterdiscount).toLocaleString("en-IN")%></strong></span> &nbsp; &nbsp;<span style="text-decoration: line-through; color: grey;">₹ <%=product.price.toLocaleString("en-IN")%></span></p>
     <a href="/buyandsell/user/viewproduct/<%=product._id%>/<%=user._id%>" class="btn btn-primary">View Product</a>
   </div>
 </div>
