Email OTP verification feature added

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -80,7 +80,7 @@
     flex-direction: column;
   }
   .loginform {
-    width: 100%;
+    width: 90%;
     order: -1; /* Moves loginform above products */
     margin-bottom: 20px;
     position: static;
@@ -165,7 +165,7 @@
         <a href="/buyandsell/password_recovery" style="margin-bottom: 20px; text-decoration: none;">Forgot Password?</a>
           <div class="col-12" style="margin-top: 10px;">
            <button type="submit" class="btn btn-primary">Login</button>&nbsp;&nbsp;
-            <a href="/buyandsell/signup" class="btn btn-primary">Sign Up</a>
+            <a href="/buyandsell/signup_gmail" class="btn btn-primary">Sign Up</a>
           </div>
       </form>
 
