Email OTP verification feature added

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -159,11 +159,11 @@
     </div>
     <div class="loginform" >
       <form style="text-align: center;" method="POST" action="/buyandsell/login"><br><br>
-        <h3>Login</h3>
+        <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Login</h3>
         <input class="form-control login-form-control" type="text" placeholder="Email: " name="femail" >
         <input class="form-control login-form-control" type="password" placeholder="Password":  name="fpassword">
-        <a href="/buyandsell/password_recovery" style="margin-bottom: 20px; text-decoration: none;">Forgot Password?</a>
-          <div class="col-12" style="margin-top: 10px;">
+        <a href="/buyandsell/password_recovery" style="margin-bottom: 20px; text-decoration: none;">&nbsp;&nbsp;&nbsp;&nbsp;Forgot Password?</a>
+          <div class="col-12" style="margin-top: 10px;">&nbsp;&nbsp;&nbsp;&nbsp;
            <button type="submit" class="btn btn-primary">Login</button>&nbsp;&nbsp;
             <a href="/buyandsell/signup_gmail" class="btn btn-primary">Sign Up</a>
           </div>
