--- a/views/signup_gmail.ejs
+++ b/views/signup_gmail.ejs
@@ -20,6 +20,7 @@
 <body>
   <%- include("../includes/banner.ejs")%>
   <div id="main-div"><br><br>
+    <p style="text-align: center;"><Strong>Signup with Email</Strong></p>
     <p><strong>Enter your Gmail to receive an OTP for verification.</strong></p>
 <form style="text-align: center;" action="/send-otp" method="POST">
   <input class="form-control login-form-control" type="email" name="email" placeholder="Enter your Gmail" required /><br>
