--- a/views/updateaccount.ejs
+++ b/views/updateaccount.ejs
@@ -18,7 +18,7 @@
         </div>
 
          <div class="col-md-8">
-          <input type="text" class="form-control" placeholder="Email.." name="femail" >
+          <input type="text" class="form-control" placeholder="<%=user.email%>" name="femail" readonly>
         </div>
 
          <div class="col-md-8">
