--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -146,7 +146,7 @@
     <%products.forEach((product)=>{%>
     <div class="card" style="width: 19rem; margin:10px">
   <img src="<%=product.imageurl%>" class="card-img-top" alt="Product Image">
-  <div class="card-body">
+  <div class="card-body" style="background-color: aliceblue;">
     <h6 class="card-title"><span><%=product.brand%></span>&nbsp; |&nbsp; <%=product.purchase %></h6>
     <p class="card-title"><%=product.title%></p>
     <p class="card-text"><span><strong>₹ <%=(product.priceafterdiscount).toLocaleString("en-IN")%></strong></span> &nbsp; &nbsp;<span style="text-decoration: line-through; color: grey;">₹ <%=product.price.toLocaleString("en-IN")%></span></p>
@@ -186,9 +186,7 @@
       <a href="/terms">Terms</a>
     </div>
   </div>
-</footer>
-
-      
+</footer> 
 </body>
 </html>
 
