--- a/views/orderhistory.ejs
+++ b/views/orderhistory.ejs
@@ -14,7 +14,7 @@
         <p class="card-text"><span><strong>₹ <%=(order.orderdiscountedprice).toLocaleString("en-IN")%></strong></span> &nbsp; &nbsp;<span style="text-decoration: line-through; color: grey;">₹ <%=order.amount.toLocaleString("en-IN")%></span></p>
   </div>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">Status: <span
+    <li class="list-group-item"><strong>Status:</strong> <span
       style=<%if(order.status==='Order Placed'){%> "color:hotpink;"<%}%>
                     <%if(order.status==='Packed' || order.status==='Confirmed'){%> "color:blue;"<%}%>
                     <%if(order.status==='Shipped'){%> "color:orange;"<%}%>
@@ -24,7 +24,7 @@
                     <%if(order.status==='Canceled By Customer'){%> "color:grey;"<%}%>
       ><b><%=order.status%></b></span></li>
 
-
+    <%if(order.status==='Canceled By Customer'){%><li class="list-group-item"><b style="color: rgb(148, 33, 33);">Reason of cancellation:</b> <%=order.cancel_reason%></li><%}%>
     <li class="list-group-item"><%=order.createdAt%></li>
   </ul>
   <div class="card-body">
@@ -34,7 +34,7 @@
       <% } %>
 
     <%if(!(order.status==='Delivered' || order.status==='Rejected' || order.status==='Canceled By Customer')){ %> 
-      <a href="/buyandsell/user/cancelorder/<%=order._id%>/<%=user._id%>" class="card-link"><button style="background-color: rgb(230, 79, 79); border-radius: 5px;">Cancel Order</button></a>
+      <a href="/buyandsell/user/cancelorder_request/<%=order._id%>/<%=user._id%>" class="card-link"><button style="background-color: rgb(230, 79, 79); border-radius: 5px;">Cancel Order</button></a>
     <% } %>
 
     <!-- <a href="#" class="card-link">Another link</a> -->
