--- a/views/search.ejs
+++ b/views/search.ejs
@@ -6,14 +6,14 @@
 
 <div class="card" style="width: 18rem; margin: 5px;">
   <img src="<%=product.imageurl%>" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h6 class="card-title"><span><%=product.brand%></span>&nbsp; |&nbsp; <%=product.purchase %></h6>
+  <div style="background-color: aliceblue;" class="card-body">
+    <h6 class="card-title"><span><%=product.brand%></span>&nbsp; |&nbsp; <%=product.purchase %> buys</h6>
      <p class="card-title"><%=product.title%></p>
      <p class="card-text"><span><strong>₹ <%=(product.priceafterdiscount).toLocaleString("en-IN")%></strong></span> &nbsp; &nbsp;<span style="text-decoration: line-through; color: grey;">₹ <%=product.price.toLocaleString("en-IN")%></span></p>
   </div>
-  <hr>
+  <!-- <hr> -->
   <div class="card-body">
-    <a href="/buyandsell/user/viewproduct/<%=product._id%>/<%=user._id%>"><button style="float: right; border-radius: 5px; height: 3rem; width: 8rem; margin-top: -10px;">View Product</button></a>
+    <a href="/buyandsell/user/viewproduct/<%=product._id%>/<%=user._id%>"><button class="btn btn-info" style="float: right; border-radius: 5px; height: 2.5rem; width: 8rem; margin-top: -10px;">View Product</button></a>
   </div>
 </div>
   <%})%>
