--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -137,7 +137,7 @@
 
 
   <header>
-    <img src="https://static.vecteezy.com/system/resources/previews/011/871/820/non_2x/online-shopping-on-phone-buy-sell-business-digital-web-banner-application-money-advertising-payment-ecommerce-illustration-search-vector.jpg" class="banner">
+    <img src="/source-images/banner.png" class="banner">
   </header>
 
   <div id="content">
